# oficinaSys

./: README.md  pyproject.toml
oficina/gestao/: forms.py  models.py  urls.py  views.py
oficina/gestao/migrations/: 0001_initial.py  0002_alter_cliente_cpf_alter_cliente_telefoe_and_more.py  0003_alter_cliente_options_alter_orcamento_options_and_more.py  0004_remove_orcamento_responsavel_cliente_usuario_and_more.py  0005_alter_cliente_usuario_alter_orcamento_usuario_and_more.py  0006_alter_cliente_usuario_alter_orcamento_usuario_and_more.py
oficina/gestao/static/gestao/css/: dashboard.css
oficina/gestao/templates/gestao/: base.html  cadastro_usuario.html  confirmar_delete.html  dashboard.html  index.html  lista_clientes.html  lista_orcamentos.html  lista_veiculos.html  novo_cliente.html  novo_orcamento.html  novo_veiculo.html  orcamento.html  veiculos.html
oficina/gestao/templates/gestao/auth/: login.html  logout.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
oficina/gestao/templates/gestao/cliente/: confirmar_delete.html  detalhe.html  formulario.html  lista.html
oficina/gestao/templates/gestao/orcamento/: confirmar_delete.html  detalhe.html  formulario.html  imprimir.html  lista.html  relatorio.html
oficina/gestao/templates/gestao/partials/: footer.html  messages.html  navbar.html
oficina/gestao/templates/gestao/veiculo/: confirmar_delete.html  (+3 more)
oficina/gestao/templates/registration/: login.html
oficina/oficina/: settings.py  urls.py
